Adding navigation from Stratos application topology to DAS metering dashboard

--- a/components/org.apache.stratos.manager.console/console/themes/theme0/css/custom.css
+++ b/components/org.apache.stratos.manager.console/console/themes/theme0/css/custom.css
@@ -234,3 +234,10 @@ div#textform>div>h3 {
 h3.panel-title {
     color: #999;
 }
+
+button.show-usage {
+    float: right;
+    margin-bottom: 5px;
+    font-size: 14px;
+    padding: 5px 8px;
+}
